Fix layout issues

--- a/0x06-responsive_design/02-1-styles.css
+++ b/0x06-responsive_design/02-1-styles.css
@@ -47,7 +47,7 @@
     --line-height-big: 1.8;
   
     /** SECTION **/
-    --section-padding: 5rem 1.5rem;
+    --section-padding: 5rem 0;
     --section-header-padding: 0 0 3rem;
     --section-header-align: center;
     --section-title-font-size: var(--font-size-xx-large);
@@ -60,7 +60,7 @@
     --section-tagline-font-family: var(--font-family-headings);
     --section-tagline-font-weight: var(--font-weight-bold);
     --section-tagline-margin: 0;
-    --section-body-padding: 2rem 0 0;
+    --section-body-padding: 2rem 0 4rem;
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
   
@@ -167,7 +167,7 @@
   
   /* Helpers
       ============================= */
-  
+
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
     height: 1px;
@@ -176,12 +176,12 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
-  
+
   main img {
     width: 100%;
     height: auto;
-  }
-
+  } 
+  
   /*** 2. LAYOUT ***/
   
   /* Layout
@@ -216,6 +216,26 @@
   
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media screen and (max-width: 767px) {
+    :root {
+        --section-padding: 5rem 1.5rem;
+        --section-body-padding: 2rem 0 0;
+      }
+
+      .row, ul.row {
+        flex-direction: column;
+        margin: 0;
+      }
+
+      [class*='col-'] {
+        margin: 0 0 3rem 0;
+      }
+
+      .col-1-3, .col-1-2 {
+          width: 100%;
+      }
   }
   
   /* Navbar
@@ -268,9 +288,9 @@
   }
 
   @media screen and (max-width: 767px) {
-    .navbar-menu {
-      display: none;
-    } 
+      .navbar-menu {
+          display: none;
+      }
   }
   
   /* Header
@@ -404,20 +424,16 @@
     justify-content: center;
     min-height: 35vh;
   }
+  
   /* Section Latest news
       ============================= */
   
-  .section-latest-news .row {
-    flex-direction: row-reverse;
-  }
-
   @media screen and (max-width: 767px) {
-    .section-latest-news .row {
-      flex-direction: column;
-    }
+  .section-latest-news .row {
+    flex-direction: column;
   }
-
-  /* Grid
+    }
+  
   /* Section SERVICES
       ============================= */
   
@@ -432,19 +448,6 @@
     align-self: center;
   }
   
-  @media screen and (max-width: 767px) {
-    ul.row, .row {
-      flex-direction: column;
-      margin: 0;
-    }
-    [class^='col-'] {
-      margin: 0 0 3rem 0;
-    }
-    .col-1-3, .col-1-2 {
-      width: 100%;
-    }
-  }
-
   /*** 4. CARD ***/
   
   /* Card (all styles)
